-Planet Level generated procedurally (not complete) -Basis concept for exiting planet (needs fixing)

--- a/space-game.html
+++ b/space-game.html
@@ -11,6 +11,7 @@
     <script src="p5sketches/stars-background.js"></script>
     <script src="p5sketches/navigation.js"></script>
     <script src="p5sketches/planet.js"></script>
+    <script src="p5sketches/planet-level.js"></script>
     <style type="text/css" media="screen">
       .inGameStats{
         position: relative;
